--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@
   background-repeat:no-repeat;
   background-size:cover;
   background-position: center center; 
+  background-attachment: fixed;
  }
 
 .parent {
